version 1.3.0
- fix bug in running scripts from the gretl console:
  file was not closed when an error was encountered
- fix bug in Prais-Winsten estimator
- fix bug in influential observations printout, for non-
  English locales
- revamp the Dickey-Fuller test functionality, with more
  options, clearer presentation (I hope), and p-values
  using James MacKinnon's code (JAE, 1996)
- fix panel data bugs: observation strings were broken for
  frequency greater than 99, and the "panel" command did not
  obey the "cross-section" option (thanks to Mihai Nica for
  the report)
- add facility to generate cross-sectional unit dummies with
  panel data ("genr unitdum")
- add facility for nesting loops and fix some loop bugs
- fix some bugs in LaTeX equation display
- fix some breakage in online help system (e.g. for boxplots)
- add support for Latin 2 characters in gnuplot graphs
- add support for compacting daily data to weekly or monthly
- add support for daily data with a 6-day week
- fix for SUR systems with differing numbers of regressors
  across equations (thanks to Jack Lucchetti)
- add stack() function to genr command: creates a stacked
  series from a comma-separated list of series, or a
  range of series as in stack(x1..xn)
- add a genr "special": genr markers = ... can be used to
  manipulate the observation marker strings -- details in
  panel.pdf
- support "genr varname[obs] = ..." for setting individual
  observations in a series
- add "vif" command to calculate Variance Inflation Factors
  for independent variables in a regression; also available
  in the model window under Tests/collinearity
- switch to St Louis Fed database as gretl "sample" database
  (the BCIH database is getting too out-of-date)
- add the Anscombe Quartet to the gretl data files
- on Windows, make EMF graphs respect the user's choice of
  plotting colors (required a modification to gnuplot)
- add option to save graphs in EMF format
- various minor gui fixes and enhancements