@@ -33,7 +33,8 @@ static struct gretl_cmd gretl_cmds[] = {
     { SEMIC,    ";" },     
     { ADD,      "add" },
     { ADDTO,    "addto" },
-    { ADF,      "adf" },      
+    { ADF,      "adf" }, 
+    { APPEND,   "append" },
     { AR,       "ar" },       
     { ARCH,     "arch" },
     { ARMA,     "arma" },
